tests/fixtures/BinaryOperationLiteralTests/errors/string_and_nir.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print("Hello" + Nir)

